adding sub to cmd_vel

--- a/src/toulouse_rover/CMakeLists.txt
+++ b/src/toulouse_rover/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
   rosserial_python
+  teleop_twist_keyboard
 )
 
 ## System dependencies are found with CMake's conventions
