testing for ir interupt issue

--- a/src/toulouse_rover/CMakeLists.txt
+++ b/src/toulouse_rover/CMakeLists.txt
@@ -226,3 +226,11 @@ if (${KERNELRELEASE} MATCHES "raspi$")
 else()
     target_link_libraries(test_motors_ros ${catkin_LIBRARIES})
 endif()
+
+add_executable(test_ir_ros src/test_ir_ros.cpp)
+if (${KERNELRELEASE} MATCHES "raspi$")
+    target_link_libraries(test_ir_ros ${catkin_LIBRARIES} -lwiringPi)
+    set_target_properties(test_ir_ros PROPERTIES COMPILE_FLAGS "-DRPI")
+else()
+    target_link_libraries(test_ir_ros ${catkin_LIBRARIES})
+endif()
