--- a/src/toulouse_rover/package.xml
+++ b/src/toulouse_rover/package.xml
@@ -58,7 +58,7 @@
   <exec_depend>i2cpwm_board</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>pid</build_depend>
+  <exec_depend>pid</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
