--- a/src/toulouse_rover/CMakeLists.txt
+++ b/src/toulouse_rover/CMakeLists.txt
@@ -163,10 +163,10 @@ endif()
 
 add_executable(robot_control_node src/robot_control_node.cpp)
 if (${KERNELRELEASE} MATCHES "raspi$")
-    target_link_libraries(test_ir_ros ${catkin_LIBRARIES} -lwiringPi)
-    set_target_properties(test_ir_ros PROPERTIES COMPILE_FLAGS "-DRPI")
+    target_link_libraries(robot_control_node ${catkin_LIBRARIES} -lwiringPi)
+    set_target_properties(robot_control_node PROPERTIES COMPILE_FLAGS "-DRPI")
 else()
-    target_link_libraries(test_ir_ros ${catkin_LIBRARIES})
+    target_link_libraries(robot_control_node ${catkin_LIBRARIES})
 endif()
 
 ## Add cmake target dependencies of the executable
