--- a/src/toulouse_rover/package.xml
+++ b/src/toulouse_rover/package.xml
@@ -53,6 +53,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf2_ros</build_depend>
+  <build_depend>tf2_geometry_msgs</build_depend>
   <build_export_depend>i2cpwm_board</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
