--- a/src/toulouse_rover/package.xml
+++ b/src/toulouse_rover/package.xml
@@ -61,7 +61,10 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>pid</exec_depend>
-
+  <exec_depend>gmapping</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
+  <exec_depend>ydlidar_ros</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
