--- a/src/toulouse_rover/package.xml
+++ b/src/toulouse_rover/package.xml
@@ -65,6 +65,7 @@
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>ydlidar_ros</exec_depend>
+  <exec_depend>amcl</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
