--- a/src/toulouse_rover/param/base_local_planner_params.yaml
+++ b/src/toulouse_rover/param/base_local_planner_params.yaml
@@ -1,11 +1,13 @@
 TrajectoryPlannerROS:
   max_vel_x: 0.45
-  min_vel_x: 0.1
-  max_vel_theta: 1.0
-  min_in_place_vel_theta: 0.4
+  TrajectoryPlannerROS:
+    min_vel_x: 0.4
+    min_vel_x: 0.08
+    max_vel_theta: 1.4
+    min_in_place_vel_theta: 0.8
 
-  acc_lim_theta: 3.2
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
+    acc_lim_theta: 3.2
+    acc_lim_x: 2.5
+    acc_lim_y: 2.5
 
-  holonomic_robot: true
+    holonomic_robot: false
