--- a/src/toulouse_rover/package.xml
+++ b/src/toulouse_rover/package.xml
@@ -50,6 +50,7 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>i2cpwm_board</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf2_ros</build_depend>
@@ -66,6 +67,7 @@
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>ydlidar_ros</exec_depend>
   <exec_depend>amcl</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
