--- a/src/toulouse_rover/CMakeLists.txt
+++ b/src/toulouse_rover/CMakeLists.txt
@@ -226,3 +226,15 @@ install(DIRECTORY launch urdf rviz param msg maps
 install(TARGETS wheel_speed_controller_node wheel_speed_calculator_node
    RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
+if(CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
+
+  add_rostest_gtest(test_wheel_speed_calculator_node tests/test_wheel_speed_calculator/calculator.test tests/test_wheel_speed_calculator/test.cpp)
+  target_link_libraries(test_wheel_speed_calculator_node ${catkin_LIBRARIES} ${PROJECT_NAME}_lib)
+  add_dependencies(test_wheel_speed_calculator_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_lib)
+
+  add_rostest_gtest(test_wheel_speed_controller_node tests/test_wheel_speed_controller/controller.test tests/test_wheel_speed_controller/test.cpp)
+  target_link_libraries(test_wheel_speed_controller_node ${catkin_LIBRARIES} ${PROJECT_NAME}_lib)
+  add_dependencies(test_wheel_speed_controller_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_lib)
+endif()
