--- a/src/toulouse_rover/package.xml
+++ b/src/toulouse_rover/package.xml
@@ -68,6 +68,9 @@
   <exec_depend>ydlidar_ros</exec_depend>
   <exec_depend>amcl</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+
+  <test_depend>rostest</test_depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
