--- a/src/toulouse_rover/package.xml
+++ b/src/toulouse_rover/package.xml
@@ -53,11 +53,14 @@
   <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_export_depend>i2cpwm_board</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>tf2</build_export_depend>
+  <build_export_depend>tf2_ros</build_export_depend>
   <exec_depend>i2cpwm_board</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
@@ -68,7 +71,13 @@
   <exec_depend>ydlidar_ros</exec_depend>
   <exec_depend>amcl</exec_depend>
   <exec_depend>message_runtime</exec_depend>
-
+  <exec_depend>rosserial_python</exec_depend>
+  <exec_depend>teleop_twist_keyboard</exec_depend>
+  <exec_depend>tf2</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>tf2_geometry_msgs</exec_depend>
+  <exec_depend>message_generation</exec_depend>
+  
   <test_depend>rostest</test_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
