--- a/src/toulouse_rover/package.xml
+++ b/src/toulouse_rover/package.xml
@@ -52,6 +52,7 @@
   <build_depend>i2cpwm_board</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
@@ -63,6 +64,7 @@
   <build_export_depend>tf2_ros</build_export_depend>
   <exec_depend>i2cpwm_board</exec_depend>
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>pid</exec_depend>
   <exec_depend>gmapping</exec_depend>
