--- a/src/toulouse_rover/param/rosconsole.config
+++ b/src/toulouse_rover/param/rosconsole.config
@@ -1,4 +1,4 @@
 # Set the default ros output to warning and higher
-log4j.logger.ros=WARN
+log4j.logger.ros=DEBUG
 # Override my package to output everything
 log4j.logger.ros.toulouse_rover=DEBUG
