--- a/src/toulouse_rover/package.xml
+++ b/src/toulouse_rover/package.xml
@@ -49,23 +49,15 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>i2cpwm_board</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>tf2</build_depend>
-  <build_depend>tf2_ros</build_depend>
-  <build_depend>tf2_geometry_msgs</build_depend>
-  <build_export_depend>i2cpwm_board</build_export_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>tf2</build_export_depend>
-  <build_export_depend>tf2_ros</build_export_depend>
-  <exec_depend>i2cpwm_board</exec_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
+
+  <depend>roscpp</depend>
+  <depend>rospy</depend>
+  <depend>std_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
+
   <exec_depend>pid</exec_depend>
   <exec_depend>gmapping</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
@@ -75,9 +67,6 @@
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>rosserial_python</exec_depend>
   <exec_depend>teleop_twist_keyboard</exec_depend>
-  <exec_depend>tf2</exec_depend>
-  <exec_depend>tf2_ros</exec_depend>
-  <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>message_generation</exec_depend>
   
   <test_depend>rostest</test_depend>
