--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/ydlidar_ros"]
 	path = src/ydlidar_ros
 	url = git@github.com:MZandtheRaspberryPi/ydlidar_ros.git
+[submodule "src/hector_slam"]
+	path = src/hector_slam
+	url = https://github.com/tu-darmstadt-ros-pkg/hector_slam.git
